[gd_scene load_steps=17 format=2]

[ext_resource path="res://ui/PauseMenu.gd" type="Script" id=1]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="DynamicFontData" id=8]
font_path = "res://assets/cleanwork.ttf"

[sub_resource type="DynamicFont" id=9]
size = 20
font_data = SubResource( 8 )

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="DynamicFontData" id=15]
font_path = "res://assets/cleanwork.ttf"

[sub_resource type="DynamicFont" id=16]
size = 20
font_data = SubResource( 15 )

[sub_resource type="DynamicFontData" id=2]
resource_local_to_scene = true
font_path = "res://assets/cleanwork.ttf"

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = SubResource( 2 )

[node name="PauseMenu" type="Control"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -360.0
margin_right = 640.0
margin_bottom = 360.0
color = Color( 0, 0, 0, 0.713726 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -48.0
margin_right = 128.0
margin_bottom = 48.0

[node name="MainMenu" type="Button" parent="VBoxContainer"]
margin_right = 256.0
margin_bottom = 24.0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 1, 1, 1, 0.380392 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0.482353, 0.482353, 0.482353, 1 )
text = "Main Menu"

[node name="Fullscreen" type="CheckButton" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 256.0
margin_bottom = 60.0
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 12 )
custom_styles/hover_pressed = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
custom_fonts/font = SubResource( 16 )
custom_colors/font_color = Color( 1, 1, 1, 0.415686 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 0.435294 )
text = "Fullscreen"
align = 2

[node name="MusicLabel" type="Label" parent="VBoxContainer"]
margin_top = 64.0
margin_right = 256.0
margin_bottom = 88.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 0.443137 )
text = "Music"
align = 1
valign = 1

[node name="Music" type="HSlider" parent="VBoxContainer"]
margin_top = 92.0
margin_right = 256.0
margin_bottom = 108.0
max_value = 1.0
step = 0.1
value = 1.0
ticks_on_borders = false

[node name="SFXLabel" type="Label" parent="VBoxContainer"]
margin_top = 112.0
margin_right = 256.0
margin_bottom = 136.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 0.443137 )
text = "SFX"
align = 1
valign = 1

[node name="SFX" type="HSlider" parent="VBoxContainer"]
margin_top = 140.0
margin_right = 256.0
margin_bottom = 156.0
max_value = 1.0
step = 0.1
value = 1.0
ticks_on_borders = false

[node name="QuitGame" type="Button" parent="VBoxContainer"]
margin_top = 160.0
margin_right = 256.0
margin_bottom = 184.0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 1, 1, 1, 0.380392 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0.482353, 0.482353, 0.482353, 1 )
text = "Quit"

[connection signal="pressed" from="VBoxContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="VBoxContainer/Fullscreen" to="." method="_on_Fullscreen_pressed"]
[connection signal="value_changed" from="VBoxContainer/Music" to="." method="_on_Music_value_changed"]
[connection signal="value_changed" from="VBoxContainer/SFX" to="." method="_on_SFX_value_changed"]
[connection signal="pressed" from="VBoxContainer/QuitGame" to="." method="_on_QuitGame_pressed"]
